...
// MARK: - Strings

// swiftlint:disable explicit_type_interface function_parameter_count identifier_name line_length
// swiftlint:disable nesting type_body_length type_name vertical_whitespace_opening_braces
internal enum L10n {
  /// Done
  internal static let doneButton = L10n.tr("Localizable", "DoneButton", fallback: "Done")
  internal enum Attribution {
    /// Symbols: AAC Standard · © aisay.co · aacstandard.com/license
    internal static let aacStandard = L10n.tr("Localizable", "Attribution.aacStandard", fallback: "Symbols: AAC Standard · © aisay.co · aacstandard.com/license")
    /// Pictograms: Sergio Palao / ARASAAC · © Government of Aragón · CC BY-NC-SA · arasaac.org · creativecommons.org/licenses/by-nc-sa/4.0/
    internal static let arasaac = L10n.tr("Localizable", "Attribution.arasaac", fallback: "Pictograms: Sergio Palao / ARASAAC · © Government of Aragón · CC BY-NC-SA · arasaac.org · creativecommons.org/licenses/by-nc-sa/4.0/")
    ///  · Some pictograms modified in this app
...
        /// Small
        internal static let small = L10n.tr("Localizable", "FormattingView.font.size.small", fallback: "Small")
      }
    }
    internal enum TextPosition {
      /// Bottom
      internal static let bottom = L10n.tr("Localizable", "FormattingView.textPosition.bottom", fallback: "Bottom")
      /// Position
      internal static let title = L10n.tr("Localizable", "FormattingView.textPosition.title", fallback: "Position")
      /// Top
      internal static let top = L10n.tr("Localizable", "FormattingView.textPosition.top", fallback: "Top")
    }
  }
  internal enum FruitNames {
    /// apple
    internal static let apple = L10n.tr("Localizable", "FruitNames.apple", fallback: "apple")
    /// avocado
...
  internal enum PhotoContextMenu {
    /// Delete
    internal static let deleteButton = L10n.tr("Localizable", "PhotoContextMenu.deleteButton", fallback: "Delete")
    /// Duplicate
    internal static let duplicate = L10n.tr("Localizable", "PhotoContextMenu.duplicate", fallback: "Duplicate")
    /// Edit
    internal static let editButton = L10n.tr("Localizable", "PhotoContextMenu.editButton", fallback: "Edit")
    /// Change Title
    internal static let renameButton = L10n.tr("Localizable", "PhotoContextMenu.renameButton", fallback: "Change Title")
  }
  internal enum PhotoSelectionView {
    /// Add items
    internal static let addItems = L10n.tr("Localizable", "PhotoSelectionView.addItems", fallback: "Add items")
...
    internal static let revertButton = L10n.tr("Localizable", "PhotoZoomView.revertButton", fallback: "Revert")
    /// Save
    internal static let saveButton = L10n.tr("Localizable", "PhotoZoomView.saveButton", fallback: "Save")
  }
  internal enum PreviewPage {
    /// Formatting
    internal static let formattingButton = L10n.tr("Localizable", "PreviewPage.formattingButton", fallback: "Formatting")
    /// Repeat Image
    internal static let repeatButton = L10n.tr("Localizable", "PreviewPage.repeatButton", fallback: "Repeat Image")
    /// Print
    internal static let saveButton = L10n.tr("Localizable", "PreviewPage.saveButton", fallback: "Print")
    /// Save to Photo Library
    internal static let saveImageButton = L10n.tr("Localizable", "PreviewPage.saveImageButton", fallback: "Save to Photo Library")
...
