...
    struct NoPhotosView {
        static var tipView = "NoPhotosView.tipView"
        static var addPhotosButton = "NoPhotosView.addPhotosButton"
    }
    
    struct TopicTitleView {
        static var titleField = "PageLayoutTitleView.titleField"
        static var editButton = "PageLayoutTitleView.editButton"
    }
    
    struct PhotoSelectionView {
        static var selectAllButton = "PhotoSelectionView.selectAllButton"
        static var deselectAllButton = "PhotoSelectionView.deselectAllButton"
...
